# auto-maestro

./: .dockerignore  .env.dev.example  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.database  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-publish-base-img.yml  check.yml  fix.yml
chroma_db/: .gitkeep
data/: tooling.json
data/db_init_scripts/: 01_actors.js  02_messages.js  03_conversations.js
docs/: USCYBERCOM Automaestro Paper.docx  seedlab_process  seedtestplan.md
sandbox_setup/: README.md  docker-compose.seed.yml
sandbox_setup/Hosts/: Dockerfile
scripts/: README.md  down.sh  generic_rag_system.py  install_llama_cpp.bat  json_mcptest.sh  mcptest.sh  purge_all.sh  run_llama_server.bat  setup_rag.py  setup_rag_env.bat  test_containers.sh  test_mcp.sh  up.sh
scripts/document_scrapers/: scrape_hashcat_docs.py  scrape_hydra_docs.py  scrape_metasploit_docs.py  scrape_nmap_docs.py  scrape_psexec_docs.py  scrape_ssh_docs.py  scrape_telnet_docs.py
